Add ConfigReader Add configuration.properties max pagination value Add ConfigReader.loadProperties method call in SystemInitializer

--- a/src/main/webapp/WEB-INF/config/configuration.properties
+++ b/src/main/webapp/WEB-INF/config/configuration.properties
@@ -1,4 +1,7 @@
 # The configuration for the DTT app.
 # General Configuration
+
+PAGINATION_MAX_ITEMS = 50
+
 # E-Mail Configuration
 # Database Configuration
