Add variables and pattern to configuration.properties Add email pattern to EmailAddressSyntaxValidator Add password pattern to PasswordValidator

--- a/src/main/webapp/WEB-INF/config/configuration.properties
+++ b/src/main/webapp/WEB-INF/config/configuration.properties
@@ -2,6 +2,21 @@
 # General Configuration
 
 PAGINATION_MAX_ITEMS = 50
+ROOT_ADMIN = silven01@uni-passau.de
 
 # E-Mail Configuration
+
+EMAIL_PATTERN = ^[a-zA-Z0-9._%+-]+@uni-passau\\.de$
+
 # Database Configuration
+
+DATABASE_URL = someurl
+DATABASE_USER = sep23g02
+DATABASE_PASSWORD = PiewoiMahs2o
+DATABASE_SIZE = 50
+SSL = true
+SSL_FACTORY = org.postgresql.ssl.DefaultJavaSSLFactory
+
+# Password Configuration
+
+PASSWORD_PATTERN = ^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=]).*$
