--- a/src/main/webapp/WEB-INF/config/configuration.properties
+++ b/src/main/webapp/WEB-INF/config/configuration.properties
@@ -3,6 +3,9 @@
 
 PAGINATION_MAX_ITEMS = 50
 ROOT_ADMIN = silven01@uni-passau.de
+COLOR_SCHEME = default
+IMPRINT = Impressum
+LOGO_PATH = LogoSeite.png
 
 # E-Mail Configuration
 
@@ -10,9 +13,10 @@ EMAIL_PATTERN = ^[a-zA-Z0-9._%+-]+@uni-passau\\.de$
 
 # Database Configuration
 
-DATABASE_URL = someurl
+DATABASE_URL = http://bueno.fim.uni-passau.de/
 DATABASE_USER = sep23g02
 DATABASE_PASSWORD = PiewoiMahs2o
+DATABASE_DRIVER = org.postgresql.Driver
 DATABASE_SIZE = 50
 SSL = true
 SSL_FACTORY = org.postgresql.ssl.DefaultJavaSSLFactory
