Add Resource Bundles in bundle folder. Add LogoSeite.png. Add LogoSeite filepath to configuration file.

--- a/src/main/webapp/WEB-INF/config/configuration.properties
+++ b/src/main/webapp/WEB-INF/config/configuration.properties
@@ -5,7 +5,7 @@ PAGINATION_MAX_ITEMS = 50
 ROOT_ADMIN = silven01@uni-passau.de
 COLOR_SCHEME = default
 IMPRINT = Impressum
-LOGO_PATH = LogoSeite.png
+LOGO_PATH = /logo/LogoSeite.png
 
 # E-Mail Configuration
 
