Add JavaDoc for TrespassListener Add Production_Mode variable to configuration.

--- a/src/main/webapp/WEB-INF/config/configuration.properties
+++ b/src/main/webapp/WEB-INF/config/configuration.properties
@@ -6,6 +6,7 @@ ROOT_ADMIN = silven01@uni-passau.de
 COLOR_SCHEME = default
 IMPRINT = Impressum
 LOGO_PATH = /logo/LogoSeite.png
+PRODUCTION_MODE = false
 
 # E-Mail Configuration
 
