--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,9 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<web-app xmlns="https://jakarta.ee/xml/ns/jakartaee"
+<web-app id="dtt" version="5.0"
+         xmlns="https://jakarta.ee/xml/ns/jakartaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd"
-         version="5.0">
-    <display-name>DocThesisTracker</display-name>
+         xsi:schemaLocation="https://jakarta.ee/xml/ns/jakartaee
+                             https://jakarta.ee/xml/ns/jakartaee/web-app_5_0.xsd">
+
+    <display-name>Doc Thesis Tracker</display-name>
 
     <servlet>
         <servlet-name>facesServlet</servlet-name>
@@ -15,7 +17,20 @@
         <url-pattern>*.xhtml</url-pattern>
     </servlet-mapping>
 
+    <context-param>
+        <param-name>jakarta.faces.PROJECT_STAGE</param-name>
+        <param-value>Development</param-value>
+    </context-param>
+
     <welcome-file-list>
-        <welcome-file>webapp/views/anonymous/login.xhtml</welcome-file>
+        <welcome-file>views/anonymous/login.xhtml</welcome-file>
     </welcome-file-list>
+
+    <resource-env-ref>
+        <description>Object factory for the CDI Bean Manager</description>
+        <resource-env-ref-name>Bean Manager</resource-env-ref-name>
+        <resource-env-ref-type>
+            jakarta.enterprise.inject.spi.BeanManager
+        </resource-env-ref-type>
+    </resource-env-ref>
 </web-app>
