Add circulationDetails.xhtml , CirculationDetailsBacking

--- a/src/main/resources/config/configuration.properties
+++ b/src/main/resources/config/configuration.properties
@@ -14,7 +14,7 @@ EMAIL_PATTERN = ^[a-zA-Z0-9._%+-]+@uni-passau\\.de$
 
 # Database Configuration
 
-DATABASE_URL = http://bueno.fim.uni-passau.de/
+DATABASE_URL = bueno.fim.uni-passau.de
 DATABASE_USER = sep23g02
 DATABASE_PASSWORD = PiewoiMahs2o
 DATABASE_DRIVER = org.postgresql.Driver
