--- a/src/main/resources/log4j2.properties
+++ b/src/main/resources/log4j2.properties
@@ -4,6 +4,6 @@ rootLogger.appenderRef.file.ref = File
 
 appender.file.type = File
 appender.file.name = File
-appender.file.fileName = /logs/Logfile.log
+appender.file.fileName = logs\\Logfile.log
 appender.file.layout.type = PatternLayout
 appender.file.layout.pattern = %d{HH:mm::ss:SSS} [%t] %5level %logger{36} - %msg%n
