add filter for startZeit und endZeit

--- a/src/main/resources/config/configuration.properties
+++ b/src/main/resources/config/configuration.properties
@@ -1,7 +1,7 @@
 # The configuration for the DTT app.
 # General Configuration
 
-PAGINATION_MAX_ITEMS = 2
+PAGINATION_MAX_ITEMS = 4
 ROOT_ADMIN = silven01@uni-passau.de
 COLOR_SCHEME = default
 IMPRINT = Impressum
@@ -9,8 +9,10 @@ LOGO_PATH = /logo/LogoSeite.png
 PRODUCTION_MODE = false
 
 # E-Mail Configuration
+EMAIL_PATTERN="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$";
 
-EMAIL_PATTERN = ^[a-zA-Z0-9._%+-]+@uni-passau\\.de$
+
+
 
 # Database Configuration
 
