Interfaces and @Default Change all classes to use the DAO interfaces and add @Default to DAOs. Fix bugs in CirculationDAO and FacultyDAO. Change the email pattern to accept any email. Fix EmailAddressSyntaxValidator to accept a regex. Implement UncheckedExceptionHandler and add it faces config as well as the facotory. Override hashcode and equals in Faculty. Implement a faculty converter to take a faculty as input during registration. Implement LocalDateConverter to convert user birthday input during registration. Fix the registration faclet to work with the input. Fix RegistrationBacking implementation. Make some changes to UniqueCirculationNameValidator to work with the @default annotation. Change user birthday from String to localDate and make appropriate changes in the userDAO. Remove public modifier from VoteDAO interface. Change logger name in VoteDAO.

--- a/src/main/resources/config/configuration.properties
+++ b/src/main/resources/config/configuration.properties
@@ -9,11 +9,9 @@ LOGO_PATH = /logo/LogoSeite.png
 PRODUCTION_MODE = false
 
 # E-Mail Configuration
-EMAIL_PATTERN="^[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$";
 
-
-
-
+EMAIL_PATTERN = [A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\\.[A-Za-z]{2,}$
+#^[a-zA-Z0-9._%+-]+@uni-passau\\.de$
 # Database Configuration
 
 DATABASE_URL = bueno.fim.uni-passau.de
