--- a/pom.xml
+++ b/pom.xml
@@ -107,6 +107,11 @@
 			<version>5.2.0</version>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.seleniumhq.selenium</groupId>
+			<artifactId>selenium-java</artifactId>
+			<version>4.10.0</version>
+		</dependency>
 
 	</dependencies>
 	<build>
