Small fixes Fix some empty lines and uneccessary spaces. Fix TrespassListener Remove getUserState logging from User DTO. Extend Password capabilities

--- a/src/main/resources/config/configuration.properties
+++ b/src/main/resources/config/configuration.properties
@@ -24,4 +24,4 @@ SSL_FACTORY = org.postgresql.ssl.DefaultJavaSSLFactory
 
 # Password Configuration
 
-PASSWORD_PATTERN = ^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=]).*$
+PASSWORD_PATTERN = ^.*(?=.{8,})(?=..*[0-9])(?=.*[a-z])(?=.*[A-Z])(?=.*[@#$%^&+=!?\\*]).*$
