--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -25,7 +25,10 @@
     <welcome-file-list>
         <welcome-file>views/anonymous/login.xhtml</welcome-file>
     </welcome-file-list>
-
+    <error-page>
+        <error-code>404</error-code>
+        <location>/views/anonymous/errorPage.xhtml</location>
+    </error-page>
 
     <resource-env-ref>
         <description>Object factory for the CDI Bean Manager</description>
