Final fixes Add use of static variables for column names and datatable name in CirculationDAO. Remove unused import statement from ErrorPageBacking. Add better error handling in Hashing. Make RegistrationBacking prettier. Make TrespassListener prettier. Add internal server error code to web.xml

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,10 @@
         <error-code>404</error-code>
         <location>/views/anonymous/errorPage.xhtml</location>
     </error-page>
+    <error-page>
+        <error-code>500</error-code>
+        <location>/views/anonymous/errorPage.xhtml</location>
+    </error-page>
 
     <resource-env-ref>
         <description>Object factory for the CDI Bean Manager</description>
